--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ca-certificates-evrotrust (20240222) unstable; urgency=medium
+
+  * update build tooling
+
+ -- Vladimir Vitkov <vvitkov@gmail.com>  Thu, 22 Feb 2024 14:25:20 +0200
+
 ca-certificates-evrotrust (20210714) unstable; urgency=medium
 
   * Bump version for consistency
