--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ca-certificates-evrotrust (20240807) unstable; urgency=medium
+
+  * Add triggers file to auto refresh certs
+
+ -- Vladimir Vitkov <vvitkov@gmail.com>  Wed, 07 Aug 2024 10:29:18 +0300
+
 ca-certificates-evrotrust (20240222) unstable; urgency=medium
 
   * update build tooling
